--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_main"
-    android:orientation="vertical"
+<com.ms.square.android.expandabletextview.ExpandableTextView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:expandableTextView="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/expand_text_view"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
->
-
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    expandableTextView:maxCollapsedLines="5"
+    expandableTextView:animDuration="200">
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="君不见黄河之水天上来,奔流到海不复回" />
-    <Button android:onClick="click"
+        android:id="@id/expandable_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="点击有惊喜"/>
-</LinearLayout>
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:textSize="16sp"
+        android:text="aasdasdasdasdasdas"
+        android:textColor="#666666" />
+    <ImageButton
+        android:id="@id/expand_collapse"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="16dp"
+        android:layout_gravity="right|bottom"
+        android:background="@android:color/transparent"/>
+</com.ms.square.android.expandabletextview.ExpandableTextView>
